--- a/actions/cpp/action.yml
+++ b/actions/cpp/action.yml
@@ -1,16 +1,12 @@
 name: 'C/CPP'
+description: 'Lint C/CPP files'
 
-on:
-  workflow_call:
-
-jobs:
-  lint:
-    runs-on: ubuntu-latest
-    if: ${{ hashFiles('*.c') != '' }} || ${{ hashFiles('Makefile') != '' }}
-    steps:
-      - name: Install clang-format
-        run: sudo apt install -qqy --no-install-recommends clang-format
-      - name: Linters
-        uses: wearerequired/lint-action@v2
-        with:
-          clang_format: true
+runs:
+  using: composite
+  steps:
+    - name: Install clang-format
+      run: sudo apt install -qqy --no-install-recommends clang-format
+    - name: Linters
+      uses: wearerequired/lint-action@v2
+      with:
+        clang_format: true
