--- a/actions/python/action.yml
+++ b/actions/python/action.yml
@@ -15,6 +15,7 @@ runs:
         python-version: ${{ github.event.inputs.python_version }}
     - name: Install Flake8, pyright, mypy
       run: pip install flake8 flake8-import-order flake8-builtins pyright mypy
+      shell: bash
     - name: Install dependencies
       run: pip install .
     - name: flake8, mypy
