--- a/actions/rust/action.yml
+++ b/actions/rust/action.yml
@@ -1,6 +1,9 @@
 name: Rust
 
 inputs:
+  github_token:
+    description: 'GITHUB_TOKEN secret'
+    required: true
   rust_version:
     description: 'Rust version'
     default: 'stable'
@@ -20,7 +23,7 @@ runs:
     - name: Cargo clippy
       uses: giraffate/clippy-action@v1
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ inputs.github_token }}
     - name: Test Rust
       run: cargo test
       shell: bash
