--- a/actions/python/action.yml
+++ b/actions/python/action.yml
@@ -17,7 +17,7 @@ runs:
       run: pip install flake8 flake8-import-order flake8-builtins pyright mypy
       shell: bash
     - name: Install dependencies
-      run: pip install .
+      run: pip install . || (pip install poetry && poetry install --no-root)
       shell: bash
     - name: flake8, mypy
       uses: wearerequired/lint-action@v2
