Let clang-tidy rely on provided .clang-tidy file

--- a/actions/cpp/action.yml
+++ b/actions/cpp/action.yml
@@ -17,7 +17,7 @@ runs:
       with:
         style: 'file'
         version: '19'
-        tidy-checks: 'readability-*,bugprone-*,misc-*,performance-*,modernize-*'
+        tidy-checks: ''
         thread-comments: ${{ github.event_name == 'pull_request' && 'update' }}
     - name: Fail if clang-format, clang-tidy found issues
       if: steps.cpp-linter.outputs.checks-failed > 0
